# NikolaProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: variables.cmake
res/: resource_list.nbrlist
src/: app.cpp  app.h  main.cpp
